# codex-device-auth

./: .gitignore  README.md  pyproject.toml
.openai_auth/: credentials.json
codex_device_auth/: __init__.py  __main__.py  cli.py  codex_chat_model.py  config.py  credentials.py  device_code.py  runtime.py
openai_auth/: __main__.py  cli.py  codex_chat_model.py  config.py  credentials.py  device_code.py  errors.py  runtime.py
tests/: test_cli.py  test_credentials.py  test_device_code.py  test_runtime.py
tests/live/: codex_langgraph_demo.py  validate_exchange.py  validate_poll.py  validate_runtime.py  validate_usercode.py
